@@ -5,6 +5,10 @@ dgm-lib v2.2.3
 	* Added convenience constructor for cases where data array should be defaulted
 	* `move` methods are `constexpr` and `noexcept`
 	* `setVoxelSize(const sf::Vector2u&) is `noexcept`
+ * All of `dgm::Object` interface is `noexcept`
+	* Also most of the concrete implementations are now `constexpr`
+	* All default constructors are marked `[[deprecated]]`
+
 dgm-lib v2.2.2
  * Added `dgm::DynamicBuffer::isValidIndex` for testing whether there is something at index
  * Added `dgm::DynamicBuffer::at` which either returns `std::reference_wrapper` for item at index or empty `std::optional`
